--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.books_parent_container{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +43,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container{
+  display: flex;
+  list-style: none;
+}
+
+.page{
+  padding: 10px;
+  border: 1px solid #dcdcdc;
+  border-radius: 6px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.disabled{
+  cursor: not-allowed;
+
+}
+
+.active{
+  border: 2px solid #000;
+  font-weight: bold;
+}
+
+.previous{
+  padding: 10px;
+  border-radius: 6px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.break{
+  padding: 10px;
+}
+
+.next{
+  padding: 10px;
+  border-radius: 6px;
+  margin-right: 10px;
+  cursor: pointer;
 }
