--- a/src/components/BooksCard/index.module.css
+++ b/src/components/BooksCard/index.module.css
@@ -1,17 +1,17 @@
 .books_container {
-    /*width: 80%;*/
-    /*  display: flex;*/
-    /*  flex-direction: row;*/
-    /*  flex-wrap: wrap;*/
-    /*   width: 100px;*/
-       display: flex;
-       flex-wrap: wrap;
-    /*border: solid 1px red;*/
+
+    display: flex;
+    flex-wrap: wrap;
     padding: 15px;
     margin: 10px;
     width: 37%;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    background-color: whitesmoke;
+    /*background-color: whitesmoke;*/
+    border-radius: 9px;
+    background-color: #ffffff10;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+
 }
 
 img {
@@ -20,7 +20,6 @@ img {
 
 .book_info {
     top: 19%;
-    /*position: absolute;*/
     width: 146px;
     display: flex;
     flex-direction: column;
@@ -29,8 +28,8 @@ img {
     text-align: left;
     padding-left: 10px;
     font-size: 14px;
+    color: white;
 }
-
 
 .book_description_popup {
 
@@ -40,9 +39,6 @@ img {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* left: 2
-px
-; */
     margin-left: 33px;
 }
 
