--- a/src/App.css
+++ b/src/App.css
@@ -62,14 +62,19 @@
 .container {
     display: flex;
     list-style: none;
+    justify-content: center;
+    padding: 2px;
+    margin: 10px;
+    width: 100%;
 }
 
 .page {
     padding: 10px;
-    border: 1px solid #dcdcdc;
+    border: 0.1rem solid rgba(245, 245, 245, 0.73);
     border-radius: 6px;
     margin-right: 10px;
     cursor: pointer;
+    height: 45px;
 }
 
 .disabled {
@@ -78,8 +83,9 @@
 }
 
 .active {
-    border: 2px solid #000;
+    border: 1px solid rgba(0, 129, 255, 0.61);
     font-weight: bold;
+    color: mediumpurple;
 }
 
 .previous {
@@ -87,6 +93,7 @@
     border-radius: 6px;
     margin-right: 10px;
     cursor: pointer;
+    color: white;
 }
 
 .break {
@@ -101,10 +108,15 @@
 }
 
 .pagnationContainer {
-    background-color: #106175;
-    width: 100%;
+    background-color: rgba(75, 85, 55, 0.45);
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     color: white;
+    margin-left: 600px;
+    border-radius: 9px;
+    margin-top: 15px;
+
 }
+
